<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@color/profile_collapsable_content_background">

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_alum_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_margin="10dp"
        android:src="@drawable/anon_profile_pic"
        app:civ_border_width="2dp"
        app:civ_border_color="@android:color/white"/>

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:text="@string/profile_alum_name"
            android:id="@+id/profile_alum_name" />

        <View
            style="@style/dividerHorizontal"
            android:background="@android:color/white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="15sp"
            android:textColor="@android:color/white"
            android:text="@string/profile_alum_role"
            android:id="@+id/profile_alum_role"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="15sp"
            android:textColor="@android:color/white"
            android:text="@string/profile_alum_company"
            android:id="@+id/profile_alum_company"/>
    </LinearLayout>
</LinearLayout>